# SDL2__Game__Shapes2D

./: .gitignore  Makefile  README.md  compile.bat
MVSB/MVSV Sample/: MVSV Sample.sln  MVSV Sample.vcxproj
Serbia_VS_USELESS/: 52_hello_mobile.cpp  Button.cpp  Button.h  ButtonUtils.cpp  ButtonUtils.h  CONSTANT_SCREEN.h  MainMenu.cpp  MainMenu.h  Point.cpp  Point.h  Serbia.sln  Serbia.vcxproj  Serbia.vcxproj.filters  SpriteSheet.cpp  SpriteSheet.h  Triangle.cpp  Triangle.h  dimens.h  enums.h  looper.cpp  looper.h  main.cpp  utility.cpp  utility.h
Serbia_VS_USELESS/assets/: play.png~
android-project/app/: build.gradle
android-project/app/jni/: CMakeLists.txt  SDL2  SDL2_image  SDL2_mixer  SDL2_ttf  src
android-project/app/release/: output-metadata.json
android-project/app/src/main/assets/: assets
android-project/app/src/main/java/org/libsdl/app/: HIDDeviceManager.java
android-project/app/src/main/res/values/: strings.xml
android-project/gradle/wrapper/: gradle-wrapper.properties
assets/: babyinfoInstr.png~  confBabytext.png~  exit.png~
src/: 9Patches.cpp  9Patches.h  Android.mk  Button.cpp  Button.h  Circle.cpp  Circle.h  FileOperations.cpp  FileOperations.h  Game.cpp  Game.h  GameOver.cpp  GameOver.h  MainMenu.cpp  MainMenu.h  POSITION_.cpp  POSITION_.h  Point.cpp  Point.h  Rectangle.cpp  Rectangle.h  SCENE_.h  Shapes.cpp  Shapes.h  Spritesheet.cpp  Spritesheet.h  Text.cpp  Text.h  dimens.h  import.h  looper.cpp  looper.h  main.cpp  main.h
